# skillpot

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_smoke.rs
core/: Cargo.toml
core/src/: checksum.rs  convert.rs  error.rs  header.rs  lib.rs  manifest.rs  mmap_loader.rs  tensor.rs
docs/: spec.md  usage.md
examples/: cffi_example.c  python_example.py
ffi/: Cargo.toml
ffi/src/: lib.rs
include/: axon.h
python/: setup.py
python/axon/: __init__.py  _bindings.py  torch_integration.py
runtime/src/: mmap_store.rs  paging.rs  runtime.rs  tensor_cache.rs
runtime/tests/: security.rs
skillopt/: README.md  __init__.py  skillopt.py  test_skillopt.py
tests/: integration.rs
