[package]
name = "axon-cli"
description = "CLI tool for creating, inspecting, and converting .axon files"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon-core = { path = "../core", features = ["mmap"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
half = "2"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"

[[bin]]
name = "axon"
path = "src/main.rs"
