[package]
name = "axon-core"
description = "Adaptive eXecutable Object Notation — binary-first, hardware-aligned ML model container"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["mmap"]
mmap = ["dep:memmap2"]

[dependencies]
memmap2 = { version = "0.9", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "1"
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
byteorder = "1"
log = "0.4"
bitflags = "2"

[lib]
name = "axon_core"
path = "src/lib.rs"
crate-type = ["lib"]

[[test]]
name = "integration"
path = "../tests/integration.rs"
